--- a/HTML Examples/MyWebPageAboutMyself/hw6.html
+++ b/HTML Examples/MyWebPageAboutMyself/hw6.html
@@ -41,9 +41,10 @@
                 My Favorite Links
             </h2>
             <ul>
-                <li><a href="https://www.google.com">http://www.google.com</a></li>
-                <li><a href="https://c9.io">https://c9.io</a></li>
+                <li><a href="https://www.google.com">http://www.google.com/</a></li>
+                <li><a href="https://www.pfw.edu/cs/">https://www.pfw.edu/cs/</a></li>
                 <li><a href="https://github.com/lewibt01/SumFun">https://github.com/lewibt01/SumFun</a></li>
+				<li><a href="https://github.com/newac01/CareerExamples">https://github.com/newac01/CareerExamples/</a></li>
             </ul>
         </div>
         <div class="center">
@@ -51,7 +52,7 @@
                 <h3>
                     My Resume
                 </h3>
-                <object id="Resume" type="application/pdf" data="Resume_2018_pdf.pdf" height="550" width="400"></object>
+                <object id="Resume" type="application/pdf" data="Aaron_New_Resume_2019.pdf" height="600" width="450"></object>
             </div>
             <div class="youtube">
                 <h3>My Favorite YouTube Video</h3>
